--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta charset="utf-8"> 
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Project 2</title>
+    <title>...Project 2?</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap" rel="stylesheet">
@@ -29,51 +29,30 @@
     <div class="container1">
     <div class="subcontainer1">
         <div class="openingtext">
-            <div class="text1">Hello!</div>
-            <div class="text2">Let's explore this building.</div>
-            <div class="text3">Interact with the windows!</div>
-
-
-        <div class="gridcontainer">
-
-            <div class="window1-container"> 
-                <div class="window1">
-                    <img src="window1.png" alt="window1">
-                </div>
-                <div class="curtain" id="curtain">
-                    <img src="curtain.png" alt="curtain">
-                </div>
-            </div>
-            <div class="window2-container">
-                <div class="window2-1" id="window2-1">
-                    <img src="window2-1.png" alt="window2-1">
-                </div>
-                <div class="window2-2">
-                    <img src="window2-2.png" alt="window2-2">
-                </div>
-            </div>
             
-        </div>
+
+        <!-- <div class="gridcontainer">
+            
+        </div> -->
 
         <div class="gridcontainer2">
 
-            <div class="window3">
+            <!-- <div class="window3">
                 <img src="window3.png" alt="">
                 <audio controls>
                     <source src="birdchirp.mp3" type="audio/mpeg">
                 </audio>
-            </div>
+            </div> -->
             <div class="window4">
                 <div class="window4-1">
-                    <img src="window4-1.png" alt="">
+                    <!-- <img src="window4-1.png" alt=""> -->
                 </div>
                 <div class="window4-2">
-                    <img src="window4-2.png" alt="">
+                    <!-- <img src="window4-2.png" alt=""> -->
                 </div>
             </div>
             <div class="window5">
-                <img src="window5.png">
-                <button><a href='https://google.com' alt='button'>DO NOT TOUCH</a></button>
+                <img src="eyewindow.png">
             </div>
 
         </div>
